--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.3.0
 Django==3.1.3
 django-extensions==3.0.9
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.7.1
 Pillow==8.0.1
 psycopg2-binary==2.8.6
+PyJWT==2.1.0
 pytz==2020.4
 sqlparse==0.4.1
